--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     rev: v0.971
     hooks:
       - id: mypy
-  - repo: https://gitlab.com/pycqa/flake8.git
-    rev: 5.0.4
-    hooks:
-      - id: flake8
+#  - repo: https://gitlab.com/pycqa/flake8.git
+#    rev: 5.0.4
+#    hooks:
+#      - id: flake8
